--- a/index.html
+++ b/index.html
@@ -49,9 +49,162 @@
 <!-- conteúdo -->
 <section class="content">
     <div class="container">
-
+        <div class="row col1">
+            <div class="card text-white bg-dark mb-3;" style="max-width: 20rem;">
+                <div class="card-header">
+                    <img class="icone-gtr" src="./images/logoGTR.png">
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/skyline.jpg"></img>
+                    <ul>
+                        <li>
+                            Carro: Skyline GTR R34
+                        </li>
+                        <li>
+                            Motor: RB36DETT
+                        </li>
+                        <li>
+                            Power: 320HP
+                        </li>
+                        <li>
+                            Vel. máxima: 320Km/h
+                        </li>
+                        <li>
+                            preço: $1.000.000,00
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header">
+                    <img class="icone" src="./images/iconsupra.png">
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/supra2.jpg"></img>
+                    <ul>
+                        <li>
+                            carro: Toyota Supra
+                        </li>
+                        <li>
+                            Motor: 2JZGTE
+                        </li>
+                        <li>
+                            Power: 320HP
+                        </li>
+                        <li>
+                            Vel. máxima: 320Km/h
+                        </li>
+                        <li>
+                            preço: $1.000.000,00
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header">
+                    <img class="icone" src="./images/iconnsx.png">
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/nsx2.jpg"></img>
+                    <ul>
+                        <li>
+                            carro: Honda/Acura NSX
+                        </li>
+                        <li>
+                            Motor: C30A3
+                        </li>
+                        <li>
+                            Power: 320HP
+                        </li>
+                        <li>
+                            Vel. máxima: 320Km/h
+                        </li>
+                        <li>
+                            preço: $1.000.000,00
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row col2">
+            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header;">
+                    <img class="icone" src="./images/iconmazda.png">
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/mazda.jpg"></img>
+                    <ul>
+                        <li>
+                            carro: Mazda RX-7 FD
+                        </li>
+                        <li>
+                            Motor: Wankel 2
+                        </li>
+                        <li>
+                            Power: 320HP
+                        </li>
+                        <li>
+                            Vel. máxima: 320Km/h
+                        </li>
+                        <li>
+                            preço: $1.000.000,00
+                        </li>    
+                    </ul>
+                </div>
+            </div>
+            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header;">
+                    <img class="icone" src="./images/iconsubaru.png">
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/wrx.jpg"></img>
+                    <ul>
+                        <li>
+                            carro: Subaru WRX
+                        </li>
+                        <li>
+                            Motor: EJ205
+                        </li>
+                        <li>
+                            Power: 320HP
+                        </li>
+                        <li>
+                            Vel. máxima: 320Km/h
+                        </li>
+                        <li>
+                            preço: $1.000.000,00
+                        </li>
+                    </ul>
+                            
+                </div>
+            </div>
+            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+                <div class="card-header;">
+                    <img class="icone" src="./images/iconmitsubishi.png">
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/lancer.jpg"></img>
+                    <ul>
+                        <li>
+                            carro: LancerEvolution VII
+                        </li>
+                        <li>
+                            Motor: 4G63t
+                        </li>
+                        <li>
+                            Power: 320HP
+                        </li>
+                        <li>
+                            Vel. máxima: 320Km/h
+                        </li>
+                        <li>
+                            preço: $1.000.000,00
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-
 </section>
 <!-- SCRIPT JS BOOTSTRAP (TEM SEMPRE QUE FICAR NO FINAL DA PÁGINA) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
