--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 </section>
 
 <!-- NavBar -->
-
-    <ul class="navbar navbar-expand-lg">
+    <div class="navbar navbar-expand-lg">
         <div class="container d-flex">
             <li class="nav-item">
                 <h3>Novidades no estoque</h3>
@@ -44,59 +43,41 @@
             </div>
             </li>
         </div>
-    </ul>
+    </div>
 <!-- conteúdo -->
 <section class="content">
     <div class="container">
-        <div class="row col1">
+        <div class="row col">
             <div class="card text-white bg-dark mb-3;" style="max-width: 20rem;">
                 <div class="card-header">
-                    <img class="icone-gtr" src="./images/logoGTR.png">
+                    <img class="icone" src="./images/logogtr2.png">
                 </div>
                 <div class="card-body">
                     <img class="card-img" src="./images/skyline.jpg"></img>
-                    <ul>
-                        <li>
-                            Carro: Skyline GTR R34
-                        </li>
-                        <li>
-                            Motor: RB36DETT
-                        </li>
-                        <li>
-                            Power: 320HP
-                        </li>
-                        <li>
-                            Vel. máxima: 320Km/h
-                        </li>
-                        <li>
-                            preço: $1.000.000,00
-                        </li>
-                    </ul>
+                    <div class="d-flex">
+                            <li>
+                                Skyline GTR R34
+                            </li>
+                            <li>
+                            $1.000.000,00
+                            </li>
+                    </div>
                 </div>
             </div>
             <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
                 <div class="card-header">
-                    <img class="icone" src="./images/iconsupra.png">
+                    <img class="icone" src="./images/iconsupra2.png">
                 </div>
                 <div class="card-body">
                     <img class="card-img" src="./images/supra2.jpg"></img>
-                    <ul>
+                    <div class="d-flex">
                         <li>
-                            carro: Toyota Supra
+                            Toyota Supra
                         </li>
                         <li>
-                            Motor: 2JZGTE
+                            $1.000.000,00
                         </li>
-                        <li>
-                            Power: 320HP
-                        </li>
-                        <li>
-                            Vel. máxima: 320Km/h
-                        </li>
-                        <li>
-                            preço: $1.000.000,00
-                        </li>
-                    </ul>
+                    </div>
                 </div>
             </div>
             <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
@@ -105,100 +86,64 @@
                 </div>
                 <div class="card-body">
                     <img class="card-img" src="./images/nsx2.jpg"></img>
-                    <ul>
+                    <div class="d-flex">
                         <li>
-                            carro: Honda/Acura NSX
+                            Honda NSX
                         </li>
                         <li>
-                            Motor: C30A3
+                            $1.000.000,00
                         </li>
-                        <li>
-                            Power: 320HP
-                        </li>
-                        <li>
-                            Vel. máxima: 320Km/h
-                        </li>
-                        <li>
-                            preço: $1.000.000,00
-                        </li>
-                    </ul>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row col2">
+        <div class="row col">
             <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-                <div class="card-header;">
+                <div class="card-header">
                     <img class="icone" src="./images/iconmazda.png">
                 </div>
                 <div class="card-body">
                     <img class="card-img" src="./images/mazda.jpg"></img>
-                    <ul>
+                    <div class="d-flex">
                         <li>
-                            carro: Mazda RX-7 FD
+                            Mazda RX-7
                         </li>
                         <li>
-                            Motor: Wankel 2
-                        </li>
-                        <li>
-                            Power: 320HP
-                        </li>
-                        <li>
-                            Vel. máxima: 320Km/h
-                        </li>
-                        <li>
-                            preço: $1.000.000,00
+                            $1.000.000,00
                         </li>    
-                    </ul>
+                    </div>
                 </div>
             </div>
             <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-                <div class="card-header;">
+                <div class="card-header">
                     <img class="icone" src="./images/iconsubaru.png">
                 </div>
                 <div class="card-body">
                     <img class="card-img" src="./images/wrx.jpg"></img>
-                    <ul>
+                    <div class="d-flex">
                         <li>
-                            carro: Subaru WRX
+                            Subaru WRX
                         </li>
                         <li>
-                            Motor: EJ205
+                            $1.000.000,00
                         </li>
-                        <li>
-                            Power: 320HP
-                        </li>
-                        <li>
-                            Vel. máxima: 320Km/h
-                        </li>
-                        <li>
-                            preço: $1.000.000,00
-                        </li>
-                    </ul>
+                    </div>
                 </div>
             </div>
             <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-                <div class="card-header;">
-                    <img class="icone" src="./images/iconmitsubishi.png">
+                <div class="card-header">
+                    <img class="icone" src="./images/mitsubishilogo.png">
                 </div>
                 <div class="card-body">
                     <img class="card-img" src="./images/lancer.jpg"></img>
-                    <ul>
+                    <div class="d-flex">
                         <li>
-                            carro: LancerEvolution VII
+                            Lancer Evo-VII
                         </li>
                         <li>
-                            Motor: 4G63t
+                            $1.000.000,00
                         </li>
-                        <li>
-                            Power: 320HP
-                        </li>
-                        <li>
-                            Vel. máxima: 320Km/h
-                        </li>
-                        <li>
-                            preço: $1.000.000,00
-                        </li>
-                    </ul>
+                    </div>
                 </div>
             </div>
         </div>
