--- a/index.html
+++ b/index.html
@@ -22,57 +22,42 @@
         </div>
     </div>
 </section>
-
 <!-- NavBar -->
-    <div class="navbar navbar-expand-lg">
-        <div class="container d-flex">
-            <li class="nav-item">
-                <h3>Novidades no estoque</h3>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" 
-                role="button" aria-haspopup="true" aria-expanded="false">
-                Marca
-            </a>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Honda</a>
-                <a class="dropdown-item" href="#">Nissan</a>
-                <a class="dropdown-item" href="#">Toyota</a>
-                <a class="dropdown-item" href="#">Subaru</a>
-                <a class="dropdown-item" href="#">Mazda</a>
-            </div>
-            </li>
-        </div>
+<div class="navbar nav-pills">
+    <div class="container d-flex">
+            <h3>Novidades no estoque</h3>
+            <a type="button" class="btn btn-secondary btn-lg">Organizar por preço -</a>
     </div>
+</div>
 <!-- conteúdo -->
 <section class="content">
     <div class="container">
-        <div class="row col">
-            <div class="card text-white bg-dark mb-3;" style="max-width: 20rem;">
-                <div class="card-header">
-                    <img class="icone" src="./images/logogtr2.png">
-                </div>
-                <div class="card-body">
-                    <img class="card-img" src="./images/skyline.jpg"></img>
-                    <div class="d-flex">
-                            <li>
-                                Skyline GTR R34
-                            </li>
-                            <li>
-                            $1.000.000,00
-                            </li>
-                    </div>
-                </div>
-            </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+        <div class="row">
+            <div class="card bg-dark" style="max-width: 400px;">
                 <div class="card-header">
                     <img class="icone" src="./images/iconsupra2.png">
                 </div>
                 <div class="card-body">
                     <img class="card-img" src="./images/supra2.jpg"></img>
                     <div class="d-flex">
+                            <li>
+                                Toyota Supra
+                            </li>
+                            <li>
+                            $1.000.000,00
+                            </li>
+                    </div>
+                </div>
+            </div>
+            <div class="card bg-dark" style="max-width: 400px;">
+                <div class="card-header">
+                    <img class="icone" src="./images/logogtr2.png">
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/skyline.jpg"></img>
+                    <div class="d-flex">
                         <li>
-                            Toyota Supra
+                            Skyline-GTR R34
                         </li>
                         <li>
                             $1.000.000,00
@@ -80,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+            <div class="card bg-dark" style="max-width: 400px;">
                 <div class="card-header">
                     <img class="icone" src="./images/iconnsx.png">
                 </div>
@@ -97,8 +82,8 @@
                 </div>
             </div>
         </div>
-        <div class="row col">
-            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+        <div class="row">
+            <div class="card bg-dark" style="max-width: 400px;">
                 <div class="card-header">
                     <img class="icone" src="./images/iconmazda.png">
                 </div>
@@ -114,23 +99,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
-                <div class="card-header">
-                    <img class="icone" src="./images/iconsubaru.png">
-                </div>
-                <div class="card-body">
-                    <img class="card-img" src="./images/wrx.jpg"></img>
-                    <div class="d-flex">
-                        <li>
-                            Subaru WRX
-                        </li>
-                        <li>
-                            $1.000.000,00
-                        </li>
-                    </div>
-                </div>
-            </div>
-            <div class="card text-white bg-dark mb-3" style="max-width: 20rem;">
+            <div class="card bg-dark" style="max-width: 400px;">
                 <div class="card-header">
                     <img class="icone" src="./images/mitsubishilogo.png">
                 </div>
@@ -139,6 +108,22 @@
                     <div class="d-flex">
                         <li>
                             Lancer Evo-VII
+                        </li>
+                        <li>
+                            $1.000.000,00
+                        </li>
+                    </div>
+                </div>
+            </div>
+            <div class="card bg-dark" style="max-width: 400px;">
+                <div class="card-header">
+                    <img class="icone" src="./images/iconsubaru.png">
+                </div>
+                <div class="card-body">
+                    <img class="card-img" src="./images/wrx.jpg"></img>
+                    <div class="d-flex">
+                        <li>
+                            Subaru WRX
                         </li>
                         <li>
                             $1.000.000,00
