--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drift-Metal</title>
+    <title>Drift-King</title>
     <link rel="stylesheet" href="./style.css">
 
 <!-- CSS BOOTSTRAP -->
@@ -11,11 +11,11 @@
     rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
     crossorigin="anonymous">
 </head>
-<body>
+<body class="m-0 p-0">
 <!-- TOP PAGE -->
 <section class="top-bar">
     <div>
-        <div class="container logo-dk">
+        <div class="logo-dk">
             <h6 class="top-bar-txt">
                 Salve, Bem vindo(a) ao site de JDMs Drift and Metal
             </h6>
@@ -24,109 +24,110 @@
 </section>
 <!-- NavBar -->
 <div class="navbar nav-pills">
-    <div class="container d-flex">
+    <div class="container">
             <h3>Novidades no estoque</h3>
-            <a type="button" class="btn btn-secondary btn-lg">Organizar por preço -</a>
+            <a type="button" class="btn btn-secondary btn-lg ">Organizar por preço -</a>
     </div>
 </div>
 <!-- conteúdo -->
 <section class="content">
     <div class="container">
         <div class="row">
-            <div class="card bg-dark" style="max-width: 400px;">
+            <div class="card bg-dark rounded-0 p-0 m-0 card-header" style="max-width: 400px;">
                 <div class="card-header">
-                    <img class="icone" src="./images/iconsupra2.png">
+                    <img class="icone" src="./images/toyotab.png">
                 </div>
-                <div class="card-body">
-                    <img class="card-img" src="./images/supra2.jpg"></img>
+                <div class="card-body p-0">
+                    <img class="card-img rounded-0" src="./images/supra2.jpg"></img>
                     <div class="d-flex">
                             <li>
                                 Toyota Supra
                             </li>
                             <li>
-                            $1.000.000,00
+                            $1.100.000,00
                             </li>
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark" style="max-width: 400px;">
-                <div class="card-header">
-                    <img class="icone" src="./images/logogtr2.png">
+            <div class="card bg-dark rounded-0 p-0 m-0" style="max-width: 400px;">
+                <div class="card-header rounded-0">
+                    <img class="icone" src="./images/nissanb.jpg">
                 </div>
-                <div class="card-body">
-                    <img class="card-img" src="./images/skyline.jpg"></img>
+                <div class="card-body p-0">
+                    <img class="card-img rounded-0" src="./images/skyline.jpg"></img>
                     <div class="d-flex">
                         <li>
                             Skyline-GTR R34
                         </li>
                         <li>
-                            $1.000.000,00
+                            $1.00.000,00
                         </li>
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark" style="max-width: 400px;">
+            <div class="card bg-dark rounded-0 p-0 m-0" style="max-width: 400px;">
                 <div class="card-header">
-                    <img class="icone" src="./images/iconnsx.png">
+                    <img class="icone" src="./images/acurab.jpg">
                 </div>
-                <div class="card-body">
-                    <img class="card-img" src="./images/nsx2.jpg"></img>
-                    <div class="d-flex">
+                <div class="card-body p-0">
+                    <img class="card-img rounded-0" src="./images/nsx2.jpg"></img>
+                    <div class="d-flex m-0">
                         <li>
                             Honda NSX
                         </li>
                         <li>
-                            $1.000.000,00
+                            $950.000,00
                         </li>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="card bg-dark" style="max-width: 400px;">
+            <div class="card bg-dark rounded-0 p-0 m-0" style="max-width: 400px;">
                 <div class="card-header">
-                    <img class="icone" src="./images/iconmazda.png">
+                    <div class="card44"></div>
+                    <img class="icone" src="./images/logobrancamazda.jpg">
                 </div>
-                <div class="card-body">
-                    <img class="card-img" src="./images/mazda.jpg"></img>
+                <div class="card-body p-0">
+                    <img class="card-img rounded-0" src="./images/copiarx7.jpg"></img>
                     <div class="d-flex">
                         <li>
                             Mazda RX-7
                         </li>
                         <li>
-                            $1.000.000,00
+                            $900.000,00
                         </li>    
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark" style="max-width: 400px;">
+            <div class="card bg-dark rounded-0 p-0 m-0" style="max-width: 400px;">
                 <div class="card-header">
-                    <img class="icone" src="./images/mitsubishilogo.png">
+                    <img class="icone" src="./images/mitsubishib.png">
                 </div>
-                <div class="card-body">
-                    <img class="card-img" src="./images/lancer.jpg"></img>
+                <div class="card-body p-0">
+                    <img class="card-img rounded-0" src="./images/lancer.jpg"></img>
                     <div class="d-flex">
                         <li>
                             Lancer Evo-VII
                         </li>
                         <li>
-                            $1.000.000,00
+                            $800.000,00
                         </li>
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark" style="max-width: 400px;">
+            <div class="card bg-dark rounded-0 p-0" style="max-width: 400px;">
                 <div class="card-header">
-                    <img class="icone" src="./images/iconsubaru.png">
+                    <img class="icone" src="./images/subarubb.jpg">
                 </div>
-                <div class="card-body">
-                    <img class="card-img" src="./images/wrx.jpg"></img>
+                <div class="card-body p-0">
+                    <img class="card-img rounded-0"src="./images/wrx.jpg"></img>
                     <div class="d-flex">
                         <li>
                             Subaru WRX
                         </li>
                         <li>
-                            $1.000.000,00
+                            $600.000,00
                         </li>
                     </div>
                 </div>
