--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="m-0 p-0">
 <!-- TOP PAGE -->
 <section class="top-bar">
-    <div>
+    <div class="container contbg">
         <div class="logo-dk">
             <h6 class="top-bar-txt">
                 Salve, Bem vindo(a) ao site de JDMs Drift and Metal
@@ -24,7 +24,7 @@
 </section>
 <!-- NavBar -->
 <div class="navbar nav-pills">
-    <div class="container">
+    <div class="container contbg">
             <h3>Novidades no estoque</h3>
             <a type="button" class="btn btn-secondary btn-lg ">Organizar por preço -</a>
     </div>
@@ -32,103 +32,115 @@
 <!-- conteúdo -->
 <section class="content">
     <div class="container">
-        <div class="row">
-            <div class="card bg-dark rounded-0 p-0 m-0 card-header" style="max-width: 400px;">
-                <div class="card-header">
-                    <img class="icone" src="./images/toyotab.png">
+        <div class="row row-cols-3 row-col-sm-2 row-cols-md g-4">
+            <div class="col">
+                <div class="card bg-dark rounded-0 p-0 m-0 card-header">
+                    <div class="card-header">
+                        <img class="icone" src="./images/toyotab.png">
+                    </div>
+                    <div class="card-body p-0">
+                        <img class="card-img rounded-0" src="./images/supra2.jpg"></img>
+                        <div class="d-flex">
+                                <li>
+                                    Toyota Supra
+                                </li>
+                                <li>
+                                $1.100.000,00
+                                </li>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-body p-0">
-                    <img class="card-img rounded-0" src="./images/supra2.jpg"></img>
-                    <div class="d-flex">
+            </div>
+            <div class="col">    
+                <div class="card bg-dark rounded-0 p-0 m-0">
+                    <div class="card-header rounded-0">
+                        <img class="icone" src="./images/nissanb.jpg">
+                    </div>
+                    <div class="card-body p-0">
+                        <img class="card-img rounded-0" src="./images/skyline.jpg"></img>
+                        <div class="d-flex">
                             <li>
-                                Toyota Supra
+                                Skyline-GTR R34
                             </li>
                             <li>
-                            $1.100.000,00
+                                $1.00.000,00
                             </li>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark rounded-0 p-0 m-0" style="max-width: 400px;">
-                <div class="card-header rounded-0">
-                    <img class="icone" src="./images/nissanb.jpg">
-                </div>
-                <div class="card-body p-0">
-                    <img class="card-img rounded-0" src="./images/skyline.jpg"></img>
-                    <div class="d-flex">
-                        <li>
-                            Skyline-GTR R34
-                        </li>
-                        <li>
-                            $1.00.000,00
-                        </li>
+                <div class="col">
+                    <div class="card bg-dark rounded-0 p-0 m-0">
+                        <div class="card-header">
+                            <img class="icone" src="./images/acurab.jpg">
+                        </div>
+                        <div class="card-body p-0">
+                            <img class="card-img rounded-0" src="./images/nsx2.jpg"></img>
+                            <div class="d-flex m-0">
+                                <li>
+                                    Honda NSX
+                                </li>
+                                <li>
+                                    $950.000,00
+                                </li>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark rounded-0 p-0 m-0" style="max-width: 400px;">
-                <div class="card-header">
-                    <img class="icone" src="./images/acurab.jpg">
-                </div>
-                <div class="card-body p-0">
-                    <img class="card-img rounded-0" src="./images/nsx2.jpg"></img>
-                    <div class="d-flex m-0">
-                        <li>
-                            Honda NSX
-                        </li>
-                        <li>
-                            $950.000,00
-                        </li>
+        <div class="row row-cols-3 row-col-sm-2 row-cols-md g-4">
+            <div class="col">
+                <div class="card bg-dark rounded-0 p-0 m-0">
+                    <div class="card-header">
+                        <div class="card44"></div>
+                        <img class="icone" src="./images/logobrancamazda.jpg">
+                    </div>
+                    <div class="card-body p-0">
+                        <img class="card-img rounded-0" src="./images/copiarx7.jpg"></img>
+                        <div class="d-flex">
+                            <li>
+                                Mazda RX-7
+                            </li>
+                            <li>
+                                $900.000,00
+                            </li>    
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="card bg-dark rounded-0 p-0 m-0" style="max-width: 400px;">
-                <div class="card-header">
-                    <div class="card44"></div>
-                    <img class="icone" src="./images/logobrancamazda.jpg">
-                </div>
-                <div class="card-body p-0">
-                    <img class="card-img rounded-0" src="./images/copiarx7.jpg"></img>
-                    <div class="d-flex">
-                        <li>
-                            Mazda RX-7
-                        </li>
-                        <li>
-                            $900.000,00
-                        </li>    
+            <div class="col">    
+                <div class="card bg-dark rounded-0 p-0 m-0">
+                    <div class="card-header">
+                        <img class="icone" src="./images/mitsubishib.png">
+                    </div>
+                    <div class="card-body p-0">
+                        <img class="card-img rounded-0" src="./images/lancer.jpg"></img>
+                        <div class="d-flex">
+                            <li>
+                                Lancer Evo-VII
+                            </li>
+                            <li>
+                                $800.000,00
+                            </li>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="card bg-dark rounded-0 p-0 m-0" style="max-width: 400px;">
-                <div class="card-header">
-                    <img class="icone" src="./images/mitsubishib.png">
-                </div>
-                <div class="card-body p-0">
-                    <img class="card-img rounded-0" src="./images/lancer.jpg"></img>
-                    <div class="d-flex">
-                        <li>
-                            Lancer Evo-VII
-                        </li>
-                        <li>
-                            $800.000,00
-                        </li>
+            <div class="col">    
+                <div class="card bg-dark rounded-0 p-0">
+                    <div class="card-header">
+                        <img class="icone" src="./images/subarubb.jpg">
                     </div>
-                </div>
-            </div>
-            <div class="card bg-dark rounded-0 p-0" style="max-width: 400px;">
-                <div class="card-header">
-                    <img class="icone" src="./images/subarubb.jpg">
-                </div>
-                <div class="card-body p-0">
-                    <img class="card-img rounded-0"src="./images/wrx.jpg"></img>
-                    <div class="d-flex">
-                        <li>
-                            Subaru WRX
-                        </li>
-                        <li>
-                            $600.000,00
-                        </li>
+                    <div class="card-body p-0">
+                        <img class="card-img rounded-0"src="./images/wrx.jpg"></img>
+                        <div class="d-flex">
+                            <li>
+                                Subaru WRX
+                            </li>
+                            <li>
+                                $600.000,00
+                            </li>
+                        </div>
                     </div>
                 </div>
             </div>
