--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- conteúdo -->
 <section class="content">
     <div class="container">
-        <div class="row row-cols-3 row-col-sm-2 row-cols-md g-4">
+        <div class="row row-cols-1 row-col-sm-2 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card bg-dark rounded-0 p-0 m-0 card-header">
                     <div class="card-header">
