--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 </section>
 <!-- NavBar -->
-<div class="navbar nav-pills">
+<div class="navbar">
     <div class="container contbg">
         <h3>Novidades no estoque</h3>
         <a type="button" class="btn btn-secondary btn-lg ">Organizar por preço -</a>
@@ -32,15 +32,15 @@
 <!-- conteúdo -->
 <section class="content">
     <div class="container">
-        <div class="row row-cols-1 row-col-sm-2 row-cols-md-3 g-4">
+        <div class="row row-cols-1 row-col-sm-2 row-cols-md-3 g-4 card-car">
             <div class="col">
-                <div class="card bg-dark rounded-0 p-0 m-0 card-header">
+                <div class="card bg-dark rounded-0 p-0 m-0">
                     <div class="card-header">
                         <img class="icone" src="./images/toyotab.png">
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0" src="./images/supra2.jpg"></img>
-                        <div class="d-flex">
+                        <div class="d-flex card-txt">
                                 <li>
                                     Toyota Supra
                                 </li>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0" src="./images/skyline.jpg"></img>
-                        <div class="d-flex">
+                        <div class="d-flex card-txt">
                             <li>
                                 Skyline-GTR R34
                             </li>
@@ -76,7 +76,7 @@
                         </div>
                         <div class="card-body p-0">
                             <img class="card-img rounded-0" src="./images/nsx2.jpg"></img>
-                            <div class="d-flex m-0">
+                            <div class="d-flex m-0 card-txt">
                                 <li>
                                     Honda NSX
                                 </li>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0" src="./images/copiarx7.jpg"></img>
-                        <div class="d-flex">
+                        <div class="d-flex card-txt">
                             <li>
                                 Mazda RX-7
                             </li>
@@ -113,7 +113,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0" src="./images/lancer.jpg"></img>
-                        <div class="d-flex">
+                        <div class="d-flex card-txt">
                             <li>
                                 Lancer Evo-VII
                             </li>
@@ -131,7 +131,7 @@
                     </div>
                     <div class="card-body p-0">
                         <img class="card-img rounded-0"src="./images/wrx.jpg"></img>
-                        <div class="d-flex">
+                        <div class="d-flex card-txt">
                             <li>
                                 Subaru WRX
                             </li>
